src/objects/Claim_Person_Matrix__c.object
<CustomObject>
    <fields>
        <fullName>Claim_Number__c</fullName>
        <label>Claim Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Detail__c</fullName>
        <formula>HYPERLINK(&quot;https://ap1.salesforce.com/&quot;+Contact_Id__c, &quot;Contact Detail&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Detail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_First_Name__c</fullName>
        <label>Contact First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Id__c</fullName>
        <label>Contact Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Last_Name__c</fullName>
        <label>Contact Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Type__c</fullName>
        <label>Contact Type</label>
        <picklist>
            <picklistValues>
                <fullName>Adjuster</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Broker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Claimant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Defended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insured</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Claim Person Matrix</label>
    <nameField>
        <label>Claim Person Matrix Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Claim Person Matrices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>